--- a/kuat.html
+++ b/kuat.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Coca-Cola</title>
+    <link rel="stylesheet" href="./kuat.css">
+    <title>Kuat</title>
 </head>
 <body>
   <header>
     <img src="./img/menu-burger.svg" alt="Menu hamburger">
     <span>MENU</span>
-    <a href="./kuat.html">KUAT</a>
+    <a href="./index.html">Coca-Cola</a>
   </header>
   <main>
-    <img src="./img/background-image.png" alt="logo da coca-cola" class="background-logo">
-    <h2 class="content-text">Things go better with</h2>
-    <img src="./img/coca-cola.png" alt="garrafa coca-cola" class="content-image">
+    <img src="./img/kuat_logo.webp" alt="Logo da Kuat" class="background-logo">
+    <h2 class="content-text"></h2>
+    <img src="./img/Kuat Lata 350ml 6 1500px.webp" alt="Lata da Kuat" class="background-image">
   </main>  
   <footer>
     <div></div>
