--- a/kuat.html
+++ b/kuat.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <img src="./img/kuat_logo.webp" alt="Logo da Kuat" class="background-logo">
-    <h2 class="content-text"></h2>
+    <h2 class="content-text">Beba Kuat</h2>
     <img src="./img/Kuat Lata 350ml 6 1500px.webp" alt="Lata da Kuat" class="background-image">
   </main>  
   <footer>
